--- a/index.html
+++ b/index.html
@@ -15,13 +15,18 @@
         <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&family=Mukta:wght@400;800&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/0748e5727c.js" crossorigin="anonymous"></script>
     </head>
+
     <body>
+        <!-- Heading Banner -->
         <header>
             <a class="hamburger" href="#"><i class="fas fa-bars"></i></a>
             <h1 class="banner">The Ultimate Loaf</h1>
         </header>
+        <!--Navigation Bar-->
         <div class="navbar">
+            <!--Home Button-->
             <a class="homebtn" href="#home">Home</a>
+            <!--DropDown Menu Buttons-->
             <div class="dropdown">
               <button class="dropbtn">Bread 
               </button>
@@ -63,7 +68,7 @@
                 </div>
               </div>  
           </div>
-          
+          <!--Main Text Body-->
         <main>
               <h1>Welcome!</h1>
               <p>Welcome to The Ultimate Loaf, the best place to 
